--- a/src/global.css
+++ b/src/global.css
@@ -63,7 +63,7 @@ form {
   max-width: 40rem;
   margin: 3rem auto;
   padding: 2rem;
-  background: linear-gradient(180deg, #754b8e, #654975);
+  background: linear-gradient(180deg, #766583, #654975);
   border-radius: 8px;
   box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.5);
 }
