--- a/src/global.css
+++ b/src/global.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=FontAwesome:wght@400&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Lato:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Lato:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 body {
   @apply leading-[normal] m-0;
-  font-family: 'Lato', serif;
+  font-family: "Lato", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(#d0d6d9, #ba71a2);
@@ -37,7 +37,7 @@ header img {
 }
 
 header h1 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-weight: 700;
   font-size: 3rem;
   margin: 1rem 0;
@@ -97,16 +97,16 @@ fieldset {
   color: #142020;
 }
 
-.control:has(input[type='checkbox']) {
+.control:has(input[type="checkbox"]) {
   display: flex;
   align-items: center;
 }
 
-.control:has(input[type='checkbox']) label {
+.control:has(input[type="checkbox"]) label {
   margin: 0;
 }
 
-.control input[type='checkbox'] {
+.control input[type="checkbox"] {
   display: inline-block;
   width: auto;
   max-width: none;
@@ -172,4 +172,10 @@ fieldset {
   padding: 2rem;
   border-radius: 10px;
   margin-bottom: 1rem;
+}
+
+.home-banner-img {
+  background-image: url("/vecteezy_beauty-salon-interior_27819575.jpg");
+  background-size: cover;
+  background-position: bottom;
 }
