Adjust homebanner styling and image

--- a/src/global.css
+++ b/src/global.css
@@ -177,6 +177,6 @@ fieldset {
 .home-banner-img {
   background-image: url("/vecteezy_beauty-salon-interior_27819575.jpg");
   background-size: cover;
-  background-position: bottom;
+  background-position: top;
 
 }
